# datamodel-code-generator-sandbox

./: Makefile  README.md  pyproject.toml
app/: main.py
app/routers/: hello.py
app/schemas/: error.py  hello.py
oas/: Makefile  openapi.yaml  root.yaml
oas/paths/: hello.yaml
oas/schemas/: error.yaml  hello.yaml
