[project]
name = "datamodel-code-generator-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datamodel-code-generator>=0.26.5",
    "fastapi[standard]>=0.115.8",
    "mypy>=1.14.1",
    "ruff>=0.9.4",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]
